// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@jsxui/babel-plugin 1. @jsxui/babel-plugin: 1. @jsxui/babel-plugin 1`] = `
"
import { Overrides, Text } from '@jsxui/react'

function App() {
  return (
    <Overrides
      value={[
        <Text color=\\"tomato\\" variants={{ hover: { color: 'papayawhip' } }} />,
      ]}
    >
      <Text>Hello World</Text>
    </Overrides>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { Overrides, Text } from '@jsxui/react';

function App() {
  return <Overrides value={[[Text, {
    color: \\"tomato\\",
    variants: {
      hover: {
        color: 'papayawhip'
      }
    }
  }]]}>
      <Text>Hello World</Text>
    </Overrides>;
}
"
`;

exports[`@jsxui/babel-plugin 2. @jsxui/babel-plugin: 2. @jsxui/babel-plugin 1`] = `
"
import { Overrides, Text } from '@jsxui/react'

const overrides = [
  <Text color=\\"tomato\\" variants={{ hover: { color: 'papayawhip' } }} />,
]

function App() {
  return (
    <Overrides value={overrides}>
      <Text>Hello World</Text>
    </Overrides>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { Overrides, Text } from '@jsxui/react';
const overrides = [[Text, {
  color: \\"tomato\\",
  variants: {
    hover: {
      color: 'papayawhip'
    }
  }
}]];

function App() {
  return <Overrides value={overrides}>
      <Text>Hello World</Text>
    </Overrides>;
}
"
`;
